2008-03-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/.: add apiwrap.[ch] to svn:ignore property.
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/apiwrap.rb, ext/oci8/apiwrap.yml:
	    add alternative code if OCINumberSetPi(), OCINumberIsInt() is
	    not found.
	* ext/oci8/oci8.h: delete unused macros. add LIKELY and UNLIKELY
	    macros and use the former in oci8_get_errhp().
	* ext/oci8/oci8.h, ext/oci8/oci8lib.c: change the scope of
	    oci8_base_class to static.
	* ext/oci8/ocinumber.c: fix OraNumber#** and OraNumber#<=>. raise
	    exceptions when OraNumber#round_prec or OraNumber#shift is called
	    and the Oracle client version is 8.0.
	* test/test_oranumber.rb: add testcass for all OraNumber methods.

2008-03-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c, lib/oci8/compat.rb, lib/oci8/object.rb
	  lib/oci8/oci8.rb, test/test_oci8.rb:
	    1. OCINumber, which is a new object in 2.0, become OraNumber.
	       This means OraNumber become a true numeric class.
	    2. Rdoc comments in ocinumber.c are fixed.

2008-03-08  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8lib.c, ext/oci8/rowid.c:
	    rowid.c is deleted. OCIRowid is no longer in use.
	* ext/oci8/oci8.h, ext/oci8/attr.c: oci8_get_rowid_attr()
	    is moved from rowid.c and returns a String instead of
	    an OCIRowid object.
	* ext/oci8/stmt.c: fix a rdoc comment of OCI8::Cursor#rowid.
	* lib/oci8/oci8.rb: fetch a rowid value as a String.
	* test/test_all.rb, test/test_rowid.rb: add a rowid testcase.

2008-03-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/apiwrap.rb, ext/oci8/apiwrap.yml:
	    add all OCI functions to 'apiwrap.yml'.
	* ext/oci8/object.c: use OCIObjectPin_nb() instead of OCIObjectPin().
	* ext/oci8/oci8lib.c: call OCIBreak in rb_thread_blocking_region()
	    to prevent the thread from being blocked.

2008-03-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/apiwrap.h.tmpl: