@@ -567,7 +567,7 @@ static VALUE bind_lob_get(oci8_bind_t *obind, void *data, void *null_struct)
 static void bind_lob_set(oci8_bind_t *obind, void *data, void **null_structp, VALUE val)
 {
     oci8_hp_obj_t *oho = (oci8_hp_obj_t *)data;
-    oci8_bind_lob_class_t *klass = (oci8_bind_lob_class_t *)obind->base.klass;
+    const oci8_bind_lob_class_t *klass = (const oci8_bind_lob_class_t *)obind->base.klass;
     oci8_base_t *h;
     if (!rb_obj_is_kind_of(val, *klass->klass))
         rb_raise(rb_eArgError, "Invalid argument: %s (expect %s)", rb_class2name(CLASS_OF(val)), rb_class2name(*klass->klass));
@@ -584,7 +584,7 @@ static void bind_lob_init(oci8_bind_t *obind, VALUE svc, VALUE val, VALUE length
 
 static void bind_lob_init_elem(oci8_bind_t *obind, VALUE svc)
 {
-    oci8_bind_lob_class_t *klass = (oci8_bind_lob_class_t *)obind->base.klass;
+    const oci8_bind_lob_class_t *klass = (const oci8_bind_lob_class_t *)obind->base.klass;
     oci8_hp_obj_t *oho = (oci8_hp_obj_t *)obind->valuep;
     oci8_base_t *h;
     ub4 idx = 0;
@@ -596,7 +596,7 @@ static void bind_lob_init_elem(oci8_bind_t *obind, VALUE svc)
     } while (++idx < obind->maxar_sz);
 }
 
-static oci8_bind_lob_class_t bind_clob_class = {
+static const oci8_bind_lob_class_t bind_clob_class = {
     {
         {
             oci8_bind_hp_obj_mark,
@@ -615,7 +615,7 @@ static oci8_bind_lob_class_t bind_clob_class = {
     &cOCI8CLOB
 };
 
-static oci8_bind_lob_class_t bind_nclob_class = {
+static const oci8_bind_lob_class_t bind_nclob_class = {
     {
         {
             oci8_bind_hp_obj_mark,
@@ -635,7 +635,7 @@ static oci8_bind_lob_class_t bind_nclob_class = {
     &cOCI8NCLOB
 };
 
-static oci8_bind_lob_class_t bind_blob_class = {
+static const oci8_bind_lob_class_t bind_blob_class = {
     {
         {
             oci8_bind_hp_obj_mark,
@@ -654,7 +654,7 @@ static oci8_bind_lob_class_t bind_blob_class = {
     &cOCI8BLOB
 };
 
-static oci8_bind_lob_class_t bind_bfile_class = {
+static const oci8_bind_lob_class_t bind_bfile_class = {
     {
         {
             oci8_bind_hp_obj_mark,
